--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -22,9 +22,9 @@ jobs:
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
-      - name: Write google-key.yml
+      - name: Write google-key.json
         run: |
-          echo "${{ secrets.GC_KEY }}" > google-key.yml
+          echo "${{ secrets.GC_KEY }}" > google-key.json
       - name: Run tests and build with Maven
         run: mvn --batch-mode --update-snapshots clean verify sonar:sonar --file pom.xml -DtrimStackTrace=false -Dsonar.organization=exasol -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$SONAR_TOKEN
         env:
