--- a/.github/workflows/release_droid_prepare_original_checksum.yml
+++ b/.github/workflows/release_droid_prepare_original_checksum.yml
@@ -24,7 +24,9 @@ jobs:
             ${{ runner.os }}-maven-
       - name: Write google-key.json
         run: |
-          echo "${{ secrets.GC_KEY }}" > google-key.json
+          echo "$GC_KEY" > google-key.json
+        env:
+          GC_KEY: ${{ secrets.GC_KEY }}
       - name: Run tests and build with Maven
         run: mvn -B clean verify --file pom.xml
         env:
