--- a/.github/workflows/manual_run_regression_tests.yml
+++ b/.github/workflows/manual_run_regression_tests.yml
@@ -60,8 +60,8 @@ jobs:
         run: ./.ci/upload_regression_test_result.sh
         env:
           RELEASE_NAME: "${{ github.event.release.tag_name }}"
-          DEMODB_LOG_SUBMIT_USER: "${{ secrets.DEMODB_LOG_SUBMIT_USER }}"
-          DEMODB_LOG_SUBMIT_PASS: "${{ secrets.DEMODB_LOG_SUBMIT_PASS }}"
+          REGRESSION_TEST_RESULT_SUBMIT_USER: "${{ secrets.REGRESSION_TEST_RESULT_SUBMIT_USER }}"
+          REGRESSION_TEST_RESULT_SUBMIT_PASSWORD: "${{ secrets.REGRESSION_TEST_RESULT_SUBMIT_PASSWORD }}"
       - name: Destroy cluster
         run: terraform -chdir=cloudSetup/ destroy -auto-approve
         if: always() # also run if tests failed
