--- a/.github/workflows/manual_run_regression_tests.yml
+++ b/.github/workflows/manual_run_regression_tests.yml
@@ -43,7 +43,10 @@ jobs:
         env:
           GC_KEY: ${{ secrets.GC_KEY }}n
       - name: Run tests and build with Maven
-        run: mvn --batch-mode --update-snapshots clean verify -DtrimStackTrace=false -PregressionTests -Dtest.coverage=false -Derror-code-crawler.skip=true -Dmaven.javadoc.skip=true -Dproject-keeper.skip=true
+        run: |
+          mvn --batch-mode --update-snapshots clean verify \
+              -DtrimStackTrace=false -PregressionTests -Dtest.coverage=false \
+              -Derror-code-crawler.skip=true -Dmaven.javadoc.skip=true -Dproject-keeper.skip=true
         env:
           GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
