--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,12 @@
             <version>4.8.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>nl.jqno.equalsverifier</groupId>
+            <artifactId>equalsverifier</artifactId>
+            <version>3.10.1</version>
+            <scope>test</scope>
+        </dependency>
         <!--Integration test dependencies-->
         <dependency>
             <groupId>org.testcontainers</groupId>
