--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,13 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.exasol</groupId>
     <artifactId>google-cloud-storage-document-files-virtual-schema</artifactId>
-    <version>1.1.1</version>
+    <version>1.1.2</version>
     <name>Virtual Schema for document data in files on Google Cloud Storage</name>
     <description>Adapter for document data access from files from Google Cloud Storage.</description>
     <url>https://github.com/exasol/google-cloud-storage-document-files-virtual-schema/</url>
     <properties>
         <junit.version>5.9.1</junit.version>
-        <org.testcontainers.version>1.17.3</org.testcontainers.version>
+        <org.testcontainers.version>1.17.5</org.testcontainers.version>
         <vs-common-document-files.version>7.1.1</vs-common-document-files.version>
     </properties>
     <profiles>
@@ -44,7 +44,7 @@
             <dependency>
                 <groupId>com.google.cloud</groupId>
                 <artifactId>libraries-bom</artifactId>
-                <version>26.1.2</version>
+                <version>26.1.3</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -85,7 +85,7 @@
         <dependency>
             <groupId>com.google.cloud</groupId>
             <artifactId>google-cloud-storage</artifactId>
-            <version>2.12.0</version>
+            <version>2.13.1</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.fasterxml.jackson.core</groupId>
@@ -122,7 +122,7 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>4.8.0</version>
+            <version>4.8.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -147,7 +147,7 @@
         <dependency>
             <groupId>com.exasol</groupId>
             <artifactId>test-db-builder-java</artifactId>
-            <version>3.3.4</version>
+            <version>3.4.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -172,6 +172,13 @@
             <groupId>com.exasol</groupId>
             <artifactId>performance-test-recorder-java</artifactId>
             <version>0.1.1</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- override transitive dependency of performance-test-recorder-java to avoid vulnerability CVE-2022-42889 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+            <version>1.10.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -215,6 +222,12 @@
                         Not a vulnerability in netty but how it is configured by the client software.amazon.awssdk:netty-nio-client,
                         only used in tests. -->
                         <exclude>sonatype-2020-0026</exclude>
+                        <!-- org.apache.hadoop:hadoop-common:jar:3.3.4 -->
+                        <!-- Rationale for exclusion: No update available, yet. -->
+                        <exclude>sonatype-2022-5820</exclude>
+                        <!-- org.apache.hadoop:hadoop-hdfs-client:jar:3.3.4 -->
+                        <!-- Rationale for exclusion: No update available, yet. -->
+                        <exclude>sonatype-2022-5732</exclude>
                     </excludeVulnerabilityIds>
                 </configuration>
             </plugin>
@@ -223,7 +236,7 @@
     <parent>
         <artifactId>google-cloud-storage-document-files-virtual-schema-generated-parent</artifactId>
         <groupId>com.exasol</groupId>
-        <version>1.1.1</version>
+        <version>1.1.2</version>
         <relativePath>pk_generated_parent.pom</relativePath>
     </parent>
 </project>
