--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,14 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.exasol</groupId>
     <artifactId>google-cloud-storage-document-files-virtual-schema</artifactId>
-    <version>1.1.2</version>
+    <version>1.2.0</version>
     <name>Virtual Schema for document data in files on Google Cloud Storage</name>
     <description>Adapter for document data access from files from Google Cloud Storage.</description>
     <url>https://github.com/exasol/google-cloud-storage-document-files-virtual-schema/</url>
     <properties>
-        <junit.version>5.9.1</junit.version>
-        <org.testcontainers.version>1.17.5</org.testcontainers.version>
-        <vs-common-document-files.version>7.1.1</vs-common-document-files.version>
+        <junit.version>5.9.2</junit.version>
+        <org.testcontainers.version>1.17.6</org.testcontainers.version>
+        <vs-common-document-files.version>7.2.0</vs-common-document-files.version>
     </properties>
     <profiles>
         <profile>
@@ -80,18 +80,12 @@
         <dependency>
             <groupId>com.exasol</groupId>
             <artifactId>error-reporting-java</artifactId>
-            <version>1.0.0</version>
+            <version>1.0.1</version>
         </dependency>
         <dependency>
             <groupId>com.google.cloud</groupId>
             <artifactId>google-cloud-storage</artifactId>
-            <version>2.13.1</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>com.fasterxml.jackson.core</groupId>
-                    <artifactId>jackson-core</artifactId>
-                </exclusion>
-            </exclusions>
+            <version>2.20.1</version>
         </dependency>
         <!-- Test dependencies -->
         <dependency>
@@ -122,13 +116,13 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>4.8.1</version>
+            <version>5.2.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>nl.jqno.equalsverifier</groupId>
             <artifactId>equalsverifier</artifactId>
-            <version>3.10.1</version>
+            <version>3.14.1</version>
             <scope>test</scope>
         </dependency>
         <!--Integration test dependencies-->
@@ -147,13 +141,13 @@
         <dependency>
             <groupId>com.exasol</groupId>
             <artifactId>test-db-builder-java</artifactId>
-            <version>3.4.1</version>
+            <version>3.4.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.exasol</groupId>
             <artifactId>udf-debugging-java</artifactId>
-            <version>0.6.4</version>
+            <version>0.6.8</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -165,20 +159,20 @@
         <dependency>
             <groupId>com.exasol</groupId>
             <artifactId>exasol-test-setup-abstraction-java</artifactId>
-            <version>0.3.2</version>
+            <version>2.0.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <!-- Explicitly upgrade testcontainers to fix container reuse. -->
+            <groupId>com.exasol</groupId>
+            <artifactId>exasol-testcontainers</artifactId>
+            <version>6.5.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.exasol</groupId>
             <artifactId>performance-test-recorder-java</artifactId>
-            <version>0.1.1</version>
-            <scope>test</scope>
-        </dependency>
-        <!-- override transitive dependency of performance-test-recorder-java to avoid vulnerability CVE-2022-42889 -->
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-text</artifactId>
-            <version>1.10.0</version>
+            <version>0.1.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -187,7 +181,7 @@
             <plugin>
                 <groupId>com.exasol</groupId>
                 <artifactId>project-keeper-maven-plugin</artifactId>
-                <version>2.8.0</version>
+                <version>2.9.5</version>
                 <executions>
                     <execution>
                         <goals>
@@ -236,7 +230,7 @@
     <parent>
         <artifactId>google-cloud-storage-document-files-virtual-schema-generated-parent</artifactId>
         <groupId>com.exasol</groupId>
-        <version>1.1.2</version>
+        <version>1.2.0</version>
         <relativePath>pk_generated_parent.pom</relativePath>
     </parent>
 </project>
