--- a/.gitattributes
+++ b/.gitattributes
@@ -7,3 +7,5 @@ pk_generated_parent.pom   linguist-generated=true
 .github/workflows/dependencies_check.yml                            linguist-generated=true
 .github/workflows/release_droid_print_quick_checksum.yml            linguist-generated=true
 .github/workflows/release_droid_upload_github_release_assets.yml    linguist-generated=true
+
+cloudSetup/.terraform.lock.hcl linguist-generated=true
