--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,7 @@ dependencies.md           linguist-generated=true
 pk_generated_parent.pom   linguist-generated=true
 
 .github/workflows/broken_links_checker.yml linguist-generated=true
+.github/workflows/ci-build.yml             linguist-generated=true
 .github/workflows/ci-build-next-java.yml   linguist-generated=true
 .github/workflows/dependencies_check.yml   linguist-generated=true
 .github/workflows/dependencies_update.yml  linguist-generated=true
