--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 # .settings : we need Eclipse settings for code formatter and clean-up rules
 .settings/org.eclipse.jdt.apt.core.prefs
 .settings/org.eclipse.core.resources.prefs
+.settings/org.eclipse.m2e.core.prefs
 target
 .cache
 dependency-reduced-pom.xml
