--- a/.project-keeper.yml
+++ b/.project-keeper.yml
@@ -7,12 +7,11 @@ sources:
       - udf_coverage
 linkReplacements:
 build:
-  # UDFs in Exasol 7.1 require Ubuntu 20.04
-  runnerOs: ubuntu-20.04
+  runnerOs: ubuntu-24.04
   freeDiskSpace: true
   exasolDbVersions:
     - "8.31.0" # Tests fail with 8.32.0, see https://github.com/exasol/virtual-schema-common-document/issues/193
-    - "7.1.30"
+    # - "7.1.30" # Exasol 7.1.x does not yet support the latest Ubuntu version
   workflows:
     - name: ci-build.yml
       stepCustomizations:
@@ -25,3 +24,11 @@ build:
             run: echo "$GC_KEY" > google-key.json
             env:
               GC_KEY: ${{ secrets.GC_KEY }}
+
+        - action: INSERT_AFTER
+          job: matrix-build
+          stepId: enable-testcontainer-reuse
+          content:
+            name: Fix VM Crash in UDFs
+            id: fix-vm-crash
+            run: sudo sysctl -w kernel.apparmor_restrict_unprivileged_userns=0
