--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
 doc/changes/changelog.md  linguist-generated=true
 dependencies.md           linguist-generated=true
 pk_generated_parent.pom   linguist-generated=true
+SECURITY.md               linguist-generated=true
 
 .github/workflows/broken_links_checker.yml linguist-generated=true
 .github/workflows/ci-build.yml             linguist-generated=true
